package com.codecooll.RestaurantMania.accounts.model;

public enum AccountType {
    ADMIN,
    CLIENT,
    USER
}
