package com.codecooll.RestaurantMania.restaurant.model;


import jakarta.persistence.Entity;
import jakarta.persistence.Table;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

//@Entity
//@Table(name = "admins")
//@Getter
//@Setter
//@NoArgsConstructor
//public class Admin extends Account {
//
//
//}
public class Admin {


}